SonarQube Fixes/Additional Tests for Coverage.